prepare code base

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,46 +1,39 @@
 services:
   db:
     container_name: postgres
-    image: postgres:14.1
+    image: postgres
     environment:
       POSTGRES_USER: amigoscode
       POSTGRES_PASSWORD: password
       PGDATA: /data/postgres
     volumes:
-      - db:/data/postgres
+      - postgres:/data/postgres
     ports:
       - "5332:5432"
     networks:
-      - db
+      - postgres
     restart: unless-stopped
-  amigoscode-api:
-    container_name: amigoscode-api
-    image: amigoscode/amigoscode-api
+  pgadmin:
+    container_name: pgadmin
+    image: dpage/pgadmin4
     environment:
-      SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/customer
+      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL:-pgadmin4@pgadmin.org}
+      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD:-admin}
+      PGADMIN_CONFIG_SERVER_MODE: 'False'
+    volumes:
+      - pgadmin:/var/lib/pgadmin
     ports:
-      - "8088:8080"
+      - "5050:80"
     networks:
-      - db
+      - postgres
+    restart: unless-stopped
     depends_on:
       - db
-    restart: unless-stopped
-  amigoscode-react:
-    container_name: amigoscode-react
-    image: amigoscode/amigoscode-react
-    build:
-      context: frontend/react
-      args:
-        api_base_url: http://localhost:8088
-    ports:
-      - "3000:5173"
-    depends_on:
-      - amigoscode-api
-    restart: unless-stopped
 
 networks:
-  db:
+  postgres:
     driver: bridge
 
 volumes:
-  db:
+  postgres:
+  pgadmin:
