--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -36,7 +36,7 @@ spring:
         format_sql: true
     show-sql: true
   main:
-    web-application-type: servlet
+    web-application-type:
   servlet:
     multipart:
       max-file-size: 10MB
